fixed alignment of pagination

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -97,5 +97,5 @@ blockquote p {
     } 
 
     .container {
-      margin-left: 200px; 
+      margin-left: 130px; 
     }
